restructure larva test generator and fix multiple issues